# swagger.yaml
@@ -30,133 +30,6 @@ paths:
         '500':
           description: Internal Server Error
 
-  /users/:
-    get:
-      summary: Get all users
-      responses:
-        '200':
-          description: OK
-        '500':
-          description: Internal Server Error
-
-    post:
-      summary: Create a new user
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                username:
-                  type: string
-                  example: any
-                password:
-                  type: string
-                  example: any
-                email:
-                  type: string
-                  example: any
-                name:
-                  type: string
-                  example: any
-      responses:
-        '201':
-          description: Created
-        '400':
-          description: Bad Request
-        '500':
-          description: Internal Server Error
-
-  /users/{username}:
-    get:
-      summary: Get user by username
-      parameters:
-        - name: username
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: OK
-        '400':
-          description: Bad Request
-        '500':
-          description: Internal Server Error
-
-    put:
-      summary: Update user information
-      parameters:
-        - name: username
-          in: path
-          required: true
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                username:
-                  type: string
-                  example: any
-                email:
-                  type: string
-                  example: any
-                name:
-                  type: string
-                  example: any
-                password:
-                  type: string
-                  example: any
-                newPassword:
-                  type: string
-                  example: any
-      responses:
-        '200':
-          description: OK
-        '400':
-          description: Bad Request
-        '401':
-          description: Unauthorized
-        '404':
-          description: Not Found
-        '500':
-          description: Internal Server Error
-
-    delete:
-      summary: Delete a user
-      parameters:
-        - name: username
-          in: path
-          required: true
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                password:
-                  type: string
-                  example: any
-      responses:
-        '200':
-          description: OK
-        '400':
-          description: Bad Request
-        '401':
-          description: Unauthorized
-        '404':
-          description: Not Found
-        '500':
-          description: Internal Server Error
-
   /profile/:
     get:
       summary: Get the logged in user
@@ -284,23 +157,11 @@ paths:
 
 components:
   schemas:
-    User:
-      type: object
-      properties:
-        nickname:
-          type: string
-        name:
-          type: string
-        picture:
-          type: url
-        email:
-          type: email
-        
     Task:
       type: object
       properties:
-        userId:
-          type: mongoose.Schema.Types.ObjectId
+        userSub:
+          type: string
         title:
           type: string
         description:
